--- a/Theapp/app/src/main/assets/style.css
+++ b/Theapp/app/src/main/assets/style.css
@@ -1,7 +1,16 @@
-.button{
-
+.button-container{
+    text-align: center;
+    width: 100%;
 }
 
-.button-container{
-    align: center;
+.menu-container{
+    text-align: center;
+}
+
+.button-one{
+    width: 100%;
+    height: 50px;
+    border-radius: 10px 25px;
+    background: orange;
+    font-size: 20px;
 }
