--- a/Theapp/app/src/main/assets/style.css
+++ b/Theapp/app/src/main/assets/style.css
@@ -1,6 +1,7 @@
 .button-container{
     text-align: center;
     width: 100%;
+    margin: 0 auto;
 }
 
 .menu-container{
@@ -11,6 +12,35 @@
     width: 100%;
     height: 50px;
     border-radius: 10px 25px;
-    background: orange;
-    font-size: 20px;
+    background: #FAFA00;
+    font-size: 30px;
+}
+
+#logo{
+  width: auto;
+  max-width: 400px;
+}
+
+#body-container{
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+#bridge-info-container{
+  text-align: center;
+}
+
+table{
+  text-align: left;
+  width: 100%;
+  margin:0 auto;
+}
+
+table, tr, td{
+  font-size : 30px;
+  border: 1px solid black;
+}
+
+body{
+  background-color: #FFBC58;
 }
