--- a/Theapp/app/src/main/assets/snackbar.css
+++ b/Theapp/app/src/main/assets/snackbar.css
@@ -1,7 +1,7 @@
 #snackbar{
   visibility: hidden;
   z-index: 1;
-  width: 200px;
+  min-width: 200px;
   margin-left: -100px;
   height: 50px;
   left: 50%;
