--- a/Theapp/app/src/main/assets/style.css
+++ b/Theapp/app/src/main/assets/style.css
@@ -12,13 +12,14 @@
     width: 100%;
     height: 50px;
     border-radius: 10px 25px;
-    background: #FAFA00;
+    border: 1px solid black;
     font-size: 30px;
+    background-color: #FAFA00;
 }
 
 #logo{
   width: auto;
-  max-width: 400px;
+  max-width: 200px;
 }
 
 #body-container{
@@ -43,5 +44,14 @@ table, tr, td{
 }
 
 body{
-  background-color: #FFBC58;
+  background-image: url(img/background.jpg);
+  height: 100%;
+  margin: 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+html{
+  min-height: 100%;
 }
